fixed lil page spillover

--- a/css/archive.css
+++ b/css/archive.css
@@ -1,4 +1,3 @@
-body { width: 100%; }
 ::-webkit-scrollbar { display: none; }
 
 .top-card, .btm-card {
